--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 <section class="footer">
     <footer>
-        <div class = "footer_div">  
+        <div class = "footer_div">
         <nav class="cover-navigation navigation--social">
           <ul class="navigation">
 
           {% if site.social.weibo %}
           <!-- Weibo -->
           <li class="navigation__item_social">
-            <a href="http://weibo.com/{{site.social.weibo}}" title="@{{site.social.weibo}} 的微博" target="_blank">
+            <a href="http://www.lofter.com/{{site.social.weibo}}" title="@{{site.social.weibo}} 的微博" target="_blank">
               <i class='social fa fa-weibo fa-2x'></i>
               <span class="label">Weibo</span>
             </a>
@@ -23,7 +23,7 @@
             </a>
           </li>
           {% endif %}
-          
+
           {% if site.social.twitter %}
           <!-- Twitter -->
           <li class="navigation__item_social">
@@ -67,7 +67,7 @@
 
         </div>
 
-        <div class = "footer_div">  
+        <div class = "footer_div">
            <p class="copyright text-muted">
             Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://baixin.io/">leopardpan</a> |
             <iframe
