--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           {% if site.social.weibo %}
           <!-- Weibo -->
           <li class="navigation__item_social">
-            <a href="http://www.lofter.com/{{site.social.weibo}}" title="@{{site.social.weibo}} 的微博" target="_blank">
+            <a href="http://zhuzjm.lofter.com/{{site.social.weibo}}" title="@{{site.social.weibo}} 的微博" target="_blank">
               <i class='social fa fa-weibo fa-2x'></i>
               <span class="label">Weibo</span>
             </a>
