--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -24,7 +24,7 @@
                   </div>
                 </div>
                 <div class="shang_info-play">
-                  <p>打开<span id="shang_pay_txt">支付宝</span>扫一扫，即可进行扫码打赏哦</p>
+                  <p>打开<span id="shang_pay_txt">支付宝</span>  </p>
                 </div>
               </div>
             </div>
@@ -43,7 +43,7 @@
               .shang_box-play{width:540px;height:340px;padding:10px;background-color:#fff;border-radius:10px;position:fixed;z-index:1000;left:50%;top:50%;margin-left:-280px;margin-top:-280px;border:1px dotted #dedede;display:none;}
               .shang_box-play img{border:none;border-width:0;}
               .dashang{display:block;width:100px;margin:5px auto;height:25px;line-height:25px;padding:10px;background-color:#E74851;color:#fff;text-align:center;text-decoration:none;border-radius:10px;font-weight:bold;font-size:16px;transition: all 0.3s;}
-              .dashang:hover{opacity:1;padding:0px;font-size:0px;}
+              .dashang:hover{opacity:0;padding:10px;font-size:16px;}
               .shang_close-play{float:right;display:inline-block;
                 margin-right: 10px;margin-top: 20px;
               }
