--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -24,7 +24,7 @@
                   </div>
                 </div>
                 <div class="shang_info-play">
-                  <p>打开<span id="shang_pay_txt">支付宝</span>  </p>
+                  <p>　<span id="shang_pay_txt">　</span>  </p>
                 </div>
               </div>
             </div>
